--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
   </head>
 
   <body>
-  	<div class="container">
+
+    <%= render 'layouts/navbar' %>
+
+    <div class="container">
     	<%= yield %>
     </div>
+
   </body>
 </html>
