--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,8 +18,9 @@
         <li><%= link_to "Welcome", welcome_url %></li>
         <li><%= link_to "SignUp", signup_url %></li>
         <li><%= link_to "LogIn", login_url %></li>
-        <li><%= link_to "LogOut", logout_url %></li>
-
+        <% if !current_user.nil? %>
+          <li><%= link_to "LogOut", logout_url %></li>
+        <% end %>
       </ul>
       <!--
       <ul class="nav navbar-nav navbar-right">
