--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,9 @@
 
 
 <% if flash[:alert] %>
-	<p id="notice"> <%= flash[:alert] %> </p>
+	<div class="alert alert-info" role="alert">
+		<p id="notice"> <%= flash[:alert] %> </p>
+	</div>
 <% end %>
 
 <%= form_with(model: @user, url: '/signup') do |form| %>
