--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,7 @@
           <li><%= link_to "LogIn", login_url %></li>
         <% end %>
         <% if logged_in? %>
+          <li><%= link_to "Currency", currencies_url %></li>
           <li><%= link_to "LogOut", logout_url %></li>
         <% end %>
       </ul>
