--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -29,11 +29,17 @@
         (<%= currency.symbol %>)
         </td>
         <td> <%= number_to_currency(currency.price) %></td>
-        <%= form_with url: buy_currency_path(currency.id), method: :post do |f| %>
-          <td> <%= f.number_field :amount, step: :any %> </td>
+          <%= form_with url: open_modal_currency_path(currency.id), method: :get do |f| %>
+          <td> <%= f.number_field :quantity, step: :any %> </td>
           <td> <%= f.submit 'Buy!', class: 'btn btn-primary', data: { disable_with: false } %> </td>
         <% end %>
       </tr>
+
+      <div class="modal fade" style="padding: 60px;" id="currency-<%= currency.id.to_s %>" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+        </div>
+      </div>
+
     <% end %>
   </tbody>
 </table>
