--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">ACLabs@SV</a>
+      <%= link_to 'Cryptocurrencies meet Ruby', root_path, class: 'navbar-brand' %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,19 +17,30 @@
         <li><%= link_to "Home", root_url %></li>
         <li><%= link_to "Welcome", welcome_url %></li>
         <li><%= link_to "Currency", currencies_url %></li>
-        <% if !logged_in? %>
+
+        <% if logged_in? %>
+          <li><%= link_to "LogOut", logout_url %></li>
+
+        <% else %>
           <li><%= link_to "SignUp", signup_url %></li>
           <li><%= link_to "LogIn", login_url %></li>
         <% end %>
-        <% if logged_in? %>
-          <li><%= link_to "LogOut", logout_url %></li>
-        <% end %>
       </ul>
-      <!--
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Logged in as: </a></li>
-      </ul>
-    -->
+
+      <% if logged_in? %>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+              Logged in as: <%= current_user.name %> 
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
