--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -16,7 +16,7 @@
       <th>Price</th>
       <th>Amount to buy</th>
       <th>Action</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -25,13 +25,12 @@
       <tr>
         <td>
         <%= image_tag("#{currency.name.downcase.gsub(' ', '_')}.svg", size: '23x23') %>
-        <%= currency.name %>
-        (<%= currency.symbol %>)
+        <%= currency.name %> (<%= currency.symbol %>)
         </td>
         <td> <%= number_to_currency(currency.price) %></td>
-          <%= form_with url: open_modal_currency_path(currency.id), method: :get do |f| %>
+          <%= form_with url: open_modal_currency_path(currency.id), id: "buy-form-#{currency.id}", method: :get do |f| %>
           <td> <%= f.number_field :quantity, step: :any %> </td>
-          <td> <%= f.submit 'Buy!', class: 'btn btn-primary', data: { disable_with: false } %> </td>
+          <td> <%= f.submit 'Buy!', class: 'btn btn-primary', id: "buy-#{currency.id}", data: { disable_with: false } %> </td>
         <% end %>
       </tr>
 
