prevented users from over-buying

--- a/app/views/currencies/_currency_modal.html.erb
+++ b/app/views/currencies/_currency_modal.html.erb
@@ -7,25 +7,30 @@
       <span aria-hidden="true">&times;</span>
       </button>
   </div>
-    
+
   <div class="modal-body">
     <table class="table">
       <thead>
         <th>Price</th>
+        <th>You have</th>
         <th>Coin</th>
-        <th>Action</th>
+        <th colspan="3">Action</th>
       </th>
       <tbody>
         <% current_user.amounts.each do |amount| %>
-        <tr>
-          <td><%= amount.currency.name %> <%= (@amount * @currency.price(amount.currency)).round(3) %></td>
-          <td><%= @currency.name %> <%= @amount %></td>
-          <td><%= link_to 'Buy', buy_currency_path(@currency, quantity: @amount), method: :post %></td>
-        </tr>
+            <% next if amount.currency.id == @currency.id %>
+                <tr>
+                  <td><%= amount.currency.name %> <%= (@amount.to_f * @currency.price(amount.currency).to_f).round(5) %></td>
+                  <td><%= amount.currency.name %> <%= amount.quantity.to_f %></td>
+                  <td><%= @currency.name %> <%= @amount.to_f %></td>
+                  <td><%= link_to 'Buy', buy_currency_path(@currency, quantity: @amount.to_f, buyer_currency: amount.currency.id, paid: (@amount.to_f * @currency.price(amount.currency).to_f).round(5)),
+                    class: 'btn btn-primary', method: :post, disabled: (@amount.to_f * @currency.price(amount.currency)) > amount.quantity.to_f || @amount.to_f <= 0 %></td>
+                </tr>
         <% end %>
       </tbody>
     </table>
   </div>
+
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
   </div>
