--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -29,7 +29,7 @@
         </td>
         <td> <%= number_to_currency(currency.price) %></td>
           <%= form_with url: open_modal_currency_path(currency.id), id: "buy-form-#{currency.id}", method: :get do |f| %>
-          <td> <%= f.number_field :quantity, step: :any %> </td>
+          <td> <%= f.number_field :quantity, step: 0.1 %> </td>
           <td> <%= f.submit 'Buy!', class: 'btn btn-primary', id: "buy-#{currency.id}", data: { disable_with: false } %> </td>
         <% end %>
       </tr>
