--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,31 +14,25 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Home", root_url %></li>
+        <!--<li><%= link_to "Home", root_url %></li>-->
         <li><%= link_to "Welcome", welcome_url %></li>
         <li><%= link_to "Currency", currencies_url %></li>
 
-        <% if logged_in? %>
-          <li><%= link_to "LogOut", logout_url %></li>
-
-        <% else %>
-          <li><%= link_to "SignUp", signup_url %></li>
-          <li><%= link_to "LogIn", login_url %></li>
+        <% unless logged_in? %>
+          <li><%= link_to "Login", login_url %></li>
+          <li><%= link_to "Register", signup_url %></li>
         <% end %>
       </ul>
 
       <% if logged_in? %>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-              Logged in as: <%= current_user.name %> 
+          <li class="nav-item">
+            <a href="#">
+              Logged in as <%= current_user.name %>.
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
           </li>
+
+          <li><%= link_to "Logout", logout_url %></li>
         </ul>
       <% end %>
     </div><!-- /.navbar-collapse -->
